# notify

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  configSample.ini  docker-compose-sample.yml  main.py  notify.toml  notify_v2.md  requirements
.github/workflows/: devskim.yml
config/: config.ini  configSample.ini  notify.toml
configs/: 0.json  6.json
data/: notifications.json  notify.toml
docker/: Dockerfile  Dockerfile_Simple  docker-compose.yml
lib/: logger.py
notifications/: 0.json  2.json  sample.json
old/: main.py  sample.json
scripts/: build.sh  clean.sh  cross-compile.sh  docker-build.sh  refresh+start.sh  refresh+start_detached.sh  start.sh  start_detached.sh  stop+clean.sh  stop.sh
src/: libs.rs  main.rs  mocks.rs  tests.rs
src/libs/: routes.rs  structs.rs  utils.rs
src/mocks/: utils.rs
src/tests/: structs.rs
src/utils/: mod.rs
