[package]
name = "notify"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy LCCoombs@hotmail.com"]

[dependencies]
# Used by serde_json, confy
serde = { version = "1.0.137", features = ["derive"] }
# JSON Serialization
serde_json = "1.0.81"
# App Config
toml = "0.5.9"
# Logging
log = "0.4.17"
env_logger = "0.9.0"
# Load in .env variables
dotenv = "0.15.0"
